# another-unfinished-project

./: .gitignore  README.md
AnotherUnfinishedProject/: CMakeLists.txt
AnotherUnfinishedProject/src/: AnimationState.cpp  Main.cpp
AnotherUnfinishedProject/src/Entities/: HitBox.cpp  HitBox.h  HitBoxData.h
AnotherUnfinishedProject/src/Entities/Mobs/: Orc.cpp  Orc.h
AnotherUnfinishedProject/src/Entities/Player/: Player.cpp  Player.h
AnotherUnfinishedProject/src/Helpers/: Loader.cpp  Loader.h  Math.cpp  Math.h
AnotherUnfinishedProject/src/Managers/: EnemyManager.cpp  EnemyManager.h
AnotherUnfinishedProject/src/Map/: Map.cpp  Map.h
src/: AnotherUnfinishedProjectCmake.cpp
